--- a/demo/webcam.html
+++ b/demo/webcam.html
@@ -106,7 +106,7 @@
                 <a-video id='video-element' src='#webcam' autoplay loop="true" position='0 0 -0.75'></a-video>
                 
                 <!-- screen title -->
-                <a-text value='webcam stuff' align='center' position='0 0.75 -0.75 opacity='0.1''></a-text>
+                <a-text value='webcam stuff' align='center' position='0 0.75 -0.75' opacity='0.1'></a-text>
             </a-entity>
         </a-scene>
 
