--- a/test/linear-drag-n-drop.html
+++ b/test/linear-drag-n-drop.html
@@ -14,6 +14,39 @@
 			margin: auto;
 		}
 	</style>
+	<script type="text/javascript">
+		// https://gomakethings.com/why-i-still-use-xhr-instead-of-the-fetch-api/
+		// PROTON
+
+		// queryAPI();
+
+		// function queryAPI() {
+		// 	fetch('https://jsonplaceholder.typicode.com/posts')
+		// 	.then(handleResponse)
+		// 	.then(handleData)
+		// 	.catch(handleError)
+		// }
+
+		// function handleResponse(response) {
+		// 	return response.json()
+		// 	.then(function (json) {
+		// 		if (response.ok) {
+		// 			return json;
+		// 		} else {
+		// 			return Promise.reject(response);
+		// 		}
+		// 	});
+		// }
+
+		// function handleData(d) {
+		// 	// this is where I'd put my DOM manipulation code
+		// 	console.log(d)
+		// }
+		// function handleError(err) {
+		// 	console.log('error:', err)
+		// }
+	</script>
+
 </head>
 <body>
 	<h1>Drag the squares to reorder them</h1>
