remove covid chart (find happier data set?)

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <br>
             <p><a href="test/cage.html">[ cage.html ]</a></p>
             <br>
-            <p>COVID-19 CHART • <a href="data/covid-19/viz.html">[ covid-19/viz.html ]</a>: chart from excel-file</p>
+            <!-- <p>COVID-19 CHART • <a href="data/covid-19/viz.html">[ covid-19/viz.html ]</a>: chart from excel-file</p> -->
             <p>Drawing app test • <a href="test/draw-app.html">[ draw-app.html ]</a>: draw stuff</p>
             <p>Clicky game test • <a href="test/cube-clicker.html">[ cube-clicker.html ]</a>: click stuff</p>
             <p>Touchscreen test • <a href="demo/touch-controls.html">[ touch-controls.html ]</a>: on-screen joystick phone/tablet</p>
